[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/LANServerBroadcast/server_listener/ServerListener.gd" type="Script" id=1]
[ext_resource path="res://SERVER_BROWSER.gd" type="Script" id=2]

[node name="SERVER_BROWSER" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ServerListener" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -250.0
margin_right = 400.0
margin_bottom = 250.0
color = Color( 0.282353, 0.282353, 0.282353, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -250.0
margin_right = 400.0
margin_bottom = 250.0

[node name="Button" type="Button" parent="."]
margin_left = 23.0
margin_top = 15.0
margin_right = 122.0
margin_bottom = 35.0
text = "back to menu"

[node name="create_local_server" type="Button" parent="."]
margin_left = 932.0
margin_top = 536.0
margin_right = 1011.0
margin_bottom = 585.0
text = "host game"

[connection signal="new_server" from="ServerListener" to="." method="_on_ServerListener_new_server"]
[connection signal="remove_server" from="ServerListener" to="." method="_on_ServerListener_remove_server"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="create_local_server" to="." method="_on_create_local_server_pressed"]
